basic responsive mobile-up styling, except for header nav

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,4 +26,4 @@
 @import "partials/8_main";
 @import "partials/9_sidebar";
 @import "partials/10_comments";
-@import "partials/11_media-queries";
+// @import "partials/11_media-queries";
