--- a/sass/partials/_1_mixins.scss
+++ b/sass/partials/_1_mixins.scss
@@ -30,3 +30,21 @@
         background-color: rgba(0,0,0, 0.15);
     }
 }
+
+/* # Media Queries */
+
+@mixin breakpoint( $breakpoint) {
+    @if map-has-key( $breakpoints, $breakpoint) {
+        @media ( min-width: #{ map-get( $breakpoints, $breakpoint ) }) {
+            @content;
+        }
+    }
+    @else if type_of( $breakpoint)==number and unit( $breakpoint)==px or unit( $breakpoint)==em or unit( $breakpoint)==rem {
+        @media (min-width: $breakpoint) {
+            @content;
+        }
+    }
+    @else {
+        @warn "Unfortunately no value could be retrieved from `#{$breakpoint}`. "+"Please make sure it is defined in `$breakpoints` map, or it is a valid number with supported unit of px, em or rem.";
+    }
+}
