--- a/sass/partials/_2_variables.scss
+++ b/sass/partials/_2_variables.scss
@@ -45,6 +45,10 @@ $line-height-heading: 1.3;
 $line-height-body: 1.625;
 
 
+/* ### Breakpoints */
+
+$breakpoints: ( xs: 600px, sm: 860px, md: 1023px, lg: 1200px, xl: 1340px);
+
 
 /* ### Misc */
 
