--- a/sass/partials/_5_columns.scss
+++ b/sass/partials/_5_columns.scss
@@ -8,16 +8,13 @@
 .wrap {
 	margin: 0 auto;
 	max-width: 1280px;
+	padding: 0 5%;
 }
 
 .site-inner {
 	clear: both;
 	padding-top: 40px;
 	word-wrap: break-word;
-}
-
-.landing-page .site-inner {
-	max-width: 800px;
 }
 
 /* ## Column Widths and Positions
@@ -101,41 +98,48 @@
 .two-fourths,
 .two-sixths,
 .two-thirds {
-	float: left;
-	margin-left: 2.564102564102564%;
+	margin: 0;
+	width: 100%;
+
+	@include breakpoint(sm) {
+		float: left;
+		margin-left: 2.564102564102564%;
+	}
 }
 
-.one-half,
-.three-sixths,
-.two-fourths {
-	width: 48.717948717948715%;
-}
+@include breakpoint(sm) {
+	.one-half,
+	.three-sixths,
+	.two-fourths {
+		width: 48.717948717948715%;
+	}
 
-.one-third,
-.two-sixths {
-	width: 31.623931623931625%;
-}
+	.one-third,
+	.two-sixths {
+		width: 31.623931623931625%;
+	}
 
-.four-sixths,
-.two-thirds {
-	width: 65.81196581196582%;
-}
+	.four-sixths,
+	.two-thirds {
+		width: 65.81196581196582%;
+	}
 
-.one-fourth {
-	width: 23.076923076923077%;
-}
+	.one-fourth {
+		width: 23.076923076923077%;
+	}
 
-.three-fourths {
-	width: 74.35897435897436%;
-}
+	.three-fourths {
+		width: 74.35897435897436%;
+	}
 
-.one-sixth {
-	width: 14.52991452991453%;
-}
+	.one-sixth {
+		width: 14.52991452991453%;
+	}
 
-.five-sixths {
-	width: 82.90598290598291%;
-}
+	.five-sixths {
+		width: 82.90598290598291%;
+	}
+}	
 
 .first {
 	clear: both;
