--- a/sass/partials/_7_footer.scss
+++ b/sass/partials/_7_footer.scss
@@ -8,6 +8,10 @@
 	clear: both;
 	padding: 30px 0;
 
+	.widget {
+		padding-bottom: 10px;
+	}
+
 	.widget-title {
 		color: $primary-color;
 		text-transform: uppercase;
@@ -51,11 +55,18 @@
 .footer-widgets-1,
 .footer-widgets-2,
 .footer-widgets-3 {
-	width: 380px;
+	width: 100%;
+	text-align: center;
+
+	@include breakpoint(sm) {
+		width: 30%;
+		text-align: left;
+	}
 }
 
-.footer-widgets-1 {
-	margin-right: 70px;
+.footer-widgets-1,
+.footer-widgets-2 {
+	margin-right: 5%;
 }
 
 .footer-widgets-1,
@@ -65,6 +76,26 @@
 
 .footer-widgets-3 {
 	float: right;
+
+	.simple-social-icons ul  {
+		float: none !important;
+		text-align: center !important;
+
+		@include breakpoint(sm) {
+			float: left;
+			text-align: left;
+		}
+
+		li {
+			float: none;
+			display: inline;
+	
+			@include breakpoint(sm) {
+				float: left;
+				display: block;
+			}
+		}
+	}
 }
 
 
