--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -20,6 +20,11 @@
 	border-radius: $site-radius;
 	text-align: center;
 	position: relative;
+	margin: 20px 0;
+
+	@include breakpoint(md){
+		margin: 0;
+	}
 
 	img {
 		width: 100%;
@@ -358,23 +363,36 @@
 }
 
 .timeline-item {
-	margin: 30px 0;
+	@include breakpoint(md){
+		margin: 20px 0;
+	}
 
 	.blurb {
 		img {
-			float: left;
-			margin-right: 20px;
-			width: 42%;
+			width: 100%;
 			height: auto;
 			border-top-left-radius: $site-radius;
-			border-bottom-left-radius: $site-radius;
-			border-top-right-radius: 0;
+			border-top-right-radius: $site-radius;
+
+			@include breakpoint(sm) {
+				float: left;
+				margin-right: 20px;
+				width: 42%;
+				border-bottom-left-radius: $site-radius;
+				border-top-right-radius: 0;
+			}
 		}
 	
 		.item-content {
-			float: left;
-			width: 54%;
+			width: 100%;
+			padding: 0 5% 2%;
 			text-align: left;
+
+			@include breakpoint(sm) {
+				float: left;
+				width: 54%;
+				padding: 0;
+			}
 	
 			h4 {
 				&:after {
@@ -400,46 +418,49 @@
 			}
 		
 			ul.tags {
-				list-style: none;
-				margin: 0;
-				padding: 0;
-				overflow: hidden;
-				height: 30px;
-		
-				li {
-					float: left;
-					background: $fourth-dark;
-					border-radius: $site-radius;
-					display: inline-block;
-					height: 26px;
-					line-height: 24px;
-					padding: 0 10px 0 24px;
-					position: relative;
-					margin: 0 10px 10px 0;
-					transition: color 0.2s;
-		
-					a {
-						color: $secondary-dark;
-						@include font-size($font-size-xs);
-						text-decoration: none;
-						text-transform: uppercase;
-						font-weight: $font-weight-bold;
-		
-						&:hover {
-							color: $primary-color;
+				display: none;
+
+				@include breakpoint(sm) {
+					list-style: none;
+					margin: 0;
+					padding: 0;
+					overflow: hidden;
+					height: 30px;
+			
+					li {
+						background: $fourth-dark;
+						border-radius: $site-radius;
+						display: inline-block;
+						height: 26px;
+						line-height: 24px;
+						padding: 0 10px 0 24px;
+						position: relative;
+						margin: 0 10px 10px 0;
+						transition: color 0.2s;
+			
+						a {
+							color: $secondary-dark;
+							@include font-size($font-size-xs);
+							text-decoration: none;
+							text-transform: uppercase;
+							font-weight: $font-weight-bold;
+			
+							&:hover {
+								color: $primary-color;
+							}
 						}
-					}
-		
-					&:before {
-						content: '';
-						background: $white;
-						border-radius: 10px;
-						box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
-						height: 6px;
-						left: 10px;
-						position: absolute;
-						width: 6px;
-						top: 10px;
+			
+						&:before {
+							content: '';
+							background: $white;
+							border-radius: 10px;
+							box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+							height: 6px;
+							left: 10px;
+							position: absolute;
+							width: 6px;
+							top: 10px;
+						}
 					}
 				}
 			}
@@ -533,12 +554,20 @@ p.media-caption {
 --------------------------------------------- */
 
 .user-list {
-	padding: 40px 0;
+	padding: 0;
+
+	@include breakpoint(xs) {
+		padding: 40px 0;
+	}
 }
 
 .list-single-user {
 	text-align: center;
-	margin: 10px 0;
+	margin: 20px 0;
+
+	@include breakpoint(sm) {
+		margin: 10px 0;
+	}
 
 	.single-user-avatar {
 
@@ -589,7 +618,11 @@ p.media-caption {
 .entry {
 	background-color: $white;
 	margin-bottom: 40px;
-	padding: 70px 80px;
+
+	@include breakpoint(md) {
+		max-width: 700px;
+		margin: 0 auto 40px;
+	}
 }
 
 .entry-content ol,
