--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1167,13 +1167,14 @@ img.alignright,
 .site-header {
   background-color: #FFF;
   position: fixed;
-  z-index: 10;
+  z-index: 999;
   width: 100%;
+  top: 0;
+  left: 0;
   border-bottom: 1px solid rgba(62, 62, 62, 0.08);
 }
-
-.site-header > .wrap {
-  padding: 10px 0;
+.site-header .wrap {
+  padding: 10px 5%;
 }
 
 /* ## Title Area
@@ -1185,29 +1186,10 @@ img.alignright,
 }
 
 .header-image .title-area {
-  margin: 0 auto;
+  float: left;
   max-width: 300px;
   padding: 0;
 }
-
-.header-full-width .title-area {
-  float: none;
-  width: 100%;
-}
-
-.site-title {
-  font-size: 30px;
-  font-size: 3rem;
-  font-weight: 700;
-  line-height: 1.2;
-}
-.site-title a,
-.site-title a:hover,
-.site-title a:focus {
-  color: #3E3E3E;
-  text-decoration: none;
-}
-
 .header-image .site-title > a {
   background-position: center !important;
   background-size: contain !important;
@@ -1215,19 +1197,6 @@ img.alignright,
   min-height: 80px;
   width: 100%;
 }
-
-.site-description {
-  font-size: 16px;
-  font-size: 1.6rem;
-  font-weight: 400;
-  line-height: 1.5;
-}
-
-.site-description,
-.site-title {
-  margin-bottom: 0;
-}
-
 .header-image .site-description,
 .header-image .site-title {
   display: block;
@@ -1239,11 +1208,53 @@ img.alignright,
 .site-header .widget-area {
   float: right;
   text-align: right;
-  width: 800px;
+  padding: 10px 0 0 30px;
 }
 
 /* # Site Navigation
 ---------------------------------------------------------------------------------------------------- */
+.nav-primary {
+  width: 100%;
+  clear: both;
+  top: 100%;
+  left: 0;
+}
+@media (min-width: 860px) {
+  .nav-primary {
+    width: auto;
+    clear: none;
+    float: right;
+    top: auto;
+    left: auto;
+    margin-left: auto;
+  }
+}
+.js .nav-primary {
+  background-color: #FFF;
+  display: none;
+  padding: 0 5%;
+  position: absolute;
+}
+@media (min-width: 860px) {
+  .js .nav-primary {
+    background-color: transparent;
+    box-shadow: none;
+    display: block;
+    position: relative;
+    padding: 0;
+  }
+}
+.nav-primary li li {
+  margin-left: 0;
+}
+.nav-primary a:hover,
+.nav-primary a:focus,
+.nav-primary .current-menu-item > a,
+.nav-primary .sub-menu .current-menu-item > a:hover,
+.nav-primary .sub-menu .current-menu-item > a:focus {
+  text-decoration: none;
+}
+
 .genesis-nav-menu {
   clear: both;
   font-size: 16px;
@@ -1266,14 +1277,22 @@ img.alignright,
   display: block;
   padding: 20px 20px;
 }
-.genesis-nav-menu > .menu-item:last-of-type {
-  background-color: #E4003F;
-  border-radius: 5px;
+.genesis-nav-menu .menu-item:hover {
+  position: static;
 }
-.genesis-nav-menu > .menu-item:last-of-type > a {
-  color: #FFF;
+.genesis-nav-menu .menu-item:hover > .sub-menu {
+  left: auto;
+  opacity: 1;
 }
-
+@media (min-width: 860px) {
+  .genesis-nav-menu > .menu-item:last-of-type {
+    background-color: #E4003F;
+    border-radius: 5px;
+  }
+  .genesis-nav-menu > .menu-item:last-of-type > a {
+    color: #FFF;
+  }
+}
 .genesis-nav-menu a:hover,
 .genesis-nav-menu a:focus,
 .genesis-nav-menu .current-menu-item > a,
@@ -1282,21 +1301,14 @@ img.alignright,
   color: #E4003F;
   text-decoration: none;
 }
-
 .genesis-nav-menu .sub-menu {
-  border-top: 1px solid #EBEBEB;
   left: -9999px;
   opacity: 0;
   position: absolute;
-  -webkit-transition: opacity .4s ease-in-out;
-  -moz-transition: opacity .4s ease-in-out;
-  -ms-transition: opacity .4s ease-in-out;
-  -o-transition: opacity .4s ease-in-out;
   transition: opacity .4s ease-in-out;
   width: 200px;
   z-index: 99;
 }
-
 .genesis-nav-menu .sub-menu a {
   background-color: #FFF;
   border: 1px solid rgba(235, 235, 235, 0.38);
@@ -1308,61 +1320,86 @@ img.alignright,
   width: 200px;
   word-wrap: break-word;
 }
-
 .genesis-nav-menu .sub-menu .sub-menu {
   margin: -56px 0 0 199px;
 }
 
-.genesis-nav-menu .menu-item:hover {
-  position: static;
-}
-
-.genesis-nav-menu .menu-item:hover > .sub-menu {
-  left: auto;
-  opacity: 1;
-}
-
-.genesis-nav-menu > .first > a {
-  padding-left: 0;
-}
-
-.genesis-nav-menu > .last > a {
-  padding-right: 0;
-}
-
-.genesis-nav-menu > .right {
-  float: right;
-}
-
-/* ## Accessible Menu
---------------------------------------------- */
-.menu .menu-item:focus {
-  position: static;
-}
-
-.menu .menu-item > a:focus + ul.sub-menu,
-.menu .menu-item.sfHover > ul.sub-menu {
-  left: auto;
-  opacity: 1;
-}
-
-.sub-menu-toggle,
-.menu-toggle {
-  display: none;
-  visibility: hidden;
-}
-
 /* ## Site Header Navigation
 --------------------------------------------- */
-.site-header .genesis-nav-menu li li {
-  margin-left: 0;
+.js nav.nav-primary,
+.js .site-header nav {
+  display: none;
+  position: relative;
 }
 
-/* ## After Header Navigation
---------------------------------------------- */
-.nav-primary {
+.menu-toggle,
+.sub-menu-toggle {
+  border-width: 0;
   background-color: #FFF;
-  border-top: 1px solid rgba(62, 62, 62, 0.08);
+  color: #3E3E3E;
+  display: block;
+  visibility: visible;
+}
+@media (min-width: 600px) {
+  .menu-toggle,
+  .sub-menu-toggle {
+    display: none;
+    visibility: hidden;
+  }
+}
+.menu-toggle:hover, .menu-toggle:focus,
+.sub-menu-toggle:hover,
+.sub-menu-toggle:focus {
+  background-color: rgba(62, 62, 62, 0.02);
+  color: #3E3E3E;
+}
+
+.menu-toggle {
+  line-height: 20px;
+  position: relative;
+  float: right;
+  z-index: 1000;
+  top: 15px;
+  width: auto;
+}
+
+.sub-menu-toggle {
+  float: right;
+  padding: 10px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 100;
+}
+
+.js .nav-primary .genesis-nav-menu .menu-item,
+.js .site-header .genesis-nav-menu .menu-item {
+  display: block;
+  float: none;
+  margin: 1px 0;
+  position: relative;
+  text-align: left;
+}
+
+.js .genesis-nav-menu .menu-item:hover {
+  position: relative;
+}
+
+.js .nav-primary .genesis-nav-menu .menu-item a,
+.js .site-header .genesis-nav-menu .menu-item a {
+  border: none;
+  padding: 12px 0;
+  width: 100%;
+}
+
+.js .genesis-nav-menu .sub-menu {
+  clear: both;
+  display: none;
+  margin: 0;
+  opacity: 1;
+  padding-left: 15px;
+  position: static;
+  width: 100%;
 }
 
 /* ## Footer Navigation
