--- a/sass/partials/_6_header.scss
+++ b/sass/partials/_6_header.scss
@@ -4,13 +4,15 @@
 .site-header {
 	background-color: $white;
 	position: fixed;
-	z-index: 10;
+	z-index: 999;
 	width: 100%;
+	top: 0;
+    left: 0;
 	border-bottom: $site-border;
-}
 
-.site-header > .wrap {
-	padding: 10px 0;
+	.wrap {
+		padding: 10px 5%;
+	}
 }
 
 /* ## Title Area
@@ -26,69 +28,83 @@
 // when image
 .header-image {
 	.title-area {
-		margin: 0 auto;
+		float: left;
 		max-width: 300px;
 		padding: 0;
 	}
-}
 
-.header-full-width .title-area {
-	float: none;
-	width: 100%;
-}
-
-.site-title {
-	font-size: 30px;
-	font-size: 3rem;
-	font-weight: 700;
-	line-height: 1.2;
-
-	a,
-	a:hover,
-	a:focus {
-		color: $base-dark;
-		text-decoration: none;
+	.site-title > a {
+		background-position: center !important;
+		background-size: contain !important;
+		float: left;
+		min-height: 80px;
+		width: 100%;
 	}
-}
 
-.header-image .site-title > a {
-	background-position: center !important;
-	background-size: contain !important;
-	float: left;
-	min-height: 80px;
-	width: 100%;
-}
-
-.site-description {
-	font-size: 16px;
-	font-size: 1.6rem;
-	font-weight: 400;
-	line-height: 1.5;
-}
-
-.site-description,
-.site-title {
-	margin-bottom: 0;
-}
-
-.header-image .site-description,
-.header-image .site-title {
-	display: block;
-	text-indent: -9999px;
+	.site-description,
+	.site-title {
+		display: block;
+		text-indent: -9999px;
+	}
 }
 
 /* ## Widget Area
 --------------------------------------------- */
 
-.site-header .widget-area {
-	float: right;
-	text-align: right;
-	width: 800px;
+.site-header {
+	.widget-area {
+		float: right;
+		text-align: right;
+		padding: 10px 0 0 30px;
+	}
 }
 
 
 /* # Site Navigation
 ---------------------------------------------------------------------------------------------------- */
+
+.nav-primary {
+    width: 100%;
+    clear: both;
+    top: 100%;
+	left: 0;
+	
+	@include breakpoint(sm) {
+        width: auto;
+        clear: none;
+        float: right;
+        top: auto;
+        left: auto;
+        margin-left: auto;
+	}
+	
+	.js & {
+        background-color: $white;
+        display: none;
+        padding: 0 5%;
+		position: absolute;
+		
+        @include breakpoint(sm) {
+            background-color: transparent;
+            box-shadow: none;
+            display: block;
+            position: relative;
+            padding: 0;
+		}
+    }
+
+    li li {
+        margin-left: 0;
+	}
+	
+    a:hover,
+    a:focus,
+    .current-menu-item>a,
+    .sub-menu .current-menu-item>a:hover,
+    .sub-menu .current-menu-item>a:focus {
+        text-decoration: none;
+    }
+}
 
 .genesis-nav-menu {
 	clear: both;
@@ -112,120 +128,138 @@
 			display: block;
 			padding: 20px 20px;
 		}
+
+		&:hover {
+			position: static;
+
+			&> .sub-menu {
+				left: auto;
+				opacity: 1;
+			}
+		}
+
 	}
 
-	> .menu-item {
-		&:last-of-type {
-			background-color: $primary-color;
-			border-radius: 5px;
-			> a {
-				color: $white;
+	@include breakpoint(sm){
+		> .menu-item {
+			&:last-of-type {
+				background-color: $primary-color;
+				border-radius: 5px;
+				> a {
+					color: $white;
+				}
 			}
 		}
 	}
-}
 
-.genesis-nav-menu a:hover,
-.genesis-nav-menu a:focus,
-.genesis-nav-menu .current-menu-item > a,
-.genesis-nav-menu .sub-menu .current-menu-item > a:hover,
-.genesis-nav-menu .sub-menu .current-menu-item > a:focus  {
-	color: $primary-color;
-	text-decoration: none;
-}
+	a:hover,
+	a:focus,
+	.current-menu-item > a,
+	.sub-menu .current-menu-item > a:hover,
+	.sub-menu .current-menu-item > a:focus  {
+		color: $primary-color;
+		text-decoration: none;
+	}
 
-.genesis-nav-menu .sub-menu {
-	border-top: 1px solid $base-light;
-	left: -9999px;
-	opacity: 0;
-	position: absolute;
-	-webkit-transition: opacity .4s ease-in-out;
-	-moz-transition:    opacity .4s ease-in-out;
-	-ms-transition:     opacity .4s ease-in-out;
-	-o-transition:      opacity .4s ease-in-out;
-	transition:         opacity .4s ease-in-out;
-	width: 200px;
-	z-index: 99;
-}
+	.sub-menu {
+		left: -9999px;
+		opacity: 0;
+		position: absolute;
+		transition: opacity .4s ease-in-out;
+		width: 200px;
+		z-index: 99;
 
-.genesis-nav-menu .sub-menu a {
-	background-color: $white;
-	border: 1px solid $third-light;
-	border-top: 0;
-	font-size: 14px;
-	font-size: 1.4rem;
-	padding: 20px;
-	position: relative;
-	width: 200px;
-	word-wrap: break-word;
-}
+		a {
+			background-color: $white;
+			border: 1px solid $third-light;
+			border-top: 0;
+			font-size: 14px;
+			font-size: 1.4rem;
+			padding: 20px;
+			position: relative;
+			width: 200px;
+			word-wrap: break-word;
+		}
 
-.genesis-nav-menu .sub-menu .sub-menu {
-	margin: -56px 0 0 199px;
-}
-
-.genesis-nav-menu .menu-item:hover {
-	position: static;
-}
-
-.genesis-nav-menu .menu-item:hover > .sub-menu {
-	left: auto;
-	opacity: 1;
-}
-
-.genesis-nav-menu > .first > a {
-	padding-left: 0;
-}
-
-.genesis-nav-menu > .last > a {
-	padding-right: 0;
-}
-
-.genesis-nav-menu > .right {
-	float: right;
-}
-
-/* ## Accessible Menu
---------------------------------------------- */
-
-.menu .menu-item:focus {
-	position: static;
-}
-
-.menu .menu-item > a:focus + ul.sub-menu,
-.menu .menu-item.sfHover > ul.sub-menu {
-	left: auto;
-	opacity: 1;
-}
-
-.sub-menu-toggle,
-.menu-toggle {
-	display: none;
-	visibility: hidden;
+		.sub-menu {
+			margin: -56px 0 0 199px;
+		}
+	}
 }
 
 /* ## Site Header Navigation
 --------------------------------------------- */
 
-.site-header .genesis-nav-menu li li {
-	margin-left: 0;
+.js nav.nav-primary,
+.js .site-header nav  {
+	display: none;
+	position: relative;
 }
 
-/* ## After Header Navigation
---------------------------------------------- */
-
-.nav-primary {
+.menu-toggle,
+.sub-menu-toggle {
+	border-width: 0;
 	background-color: $white;
-	border-top: 1px solid $fourth-dark;
+	color: $base-dark;
+	display: block;
+	visibility: visible;
+
+	@include breakpoint(xs) {
+		display: none;
+		visibility: hidden;
+	}
+
+	&:hover,
+	&:focus {
+		background-color: $fifth-dark;
+		color: $base-dark;
+	}
 }
 
-/* ## Footer Navigation
---------------------------------------------- */
-
-.site-footer .genesis-nav-menu {
-	padding-bottom: 20px;
+.menu-toggle {
+	line-height: 20px;
+	position: relative;
+	float: right;
+	z-index: 1000;
+	top: 15px;
+	width: auto;
 }
 
-.site-footer .genesis-nav-menu a {
-	padding: 0 20px 10px;
+.sub-menu-toggle {
+	float: right;
+	padding: 10px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	z-index: 100;
+}
+
+.js .nav-primary .genesis-nav-menu .menu-item,
+.js .site-header .genesis-nav-menu .menu-item {
+	display: block;
+	float: none;
+	margin: 1px 0;
+	position: relative;
+	text-align: left;
+}
+
+.js .genesis-nav-menu .menu-item:hover {
+	position: relative;
+}
+
+.js .nav-primary .genesis-nav-menu .menu-item a,
+.js .site-header .genesis-nav-menu .menu-item a {
+	border: none;
+	padding: 12px 0;
+	width: 100%;
+}
+
+.js .genesis-nav-menu .sub-menu {
+	clear: both;
+	display: none;
+	margin: 0;
+	opacity: 1;
+	padding-left: 15px;
+	position: static;
+	width: 100%;
 }
