--- a/sass/partials/_6_header.scss
+++ b/sass/partials/_6_header.scss
@@ -187,14 +187,8 @@
 	}
 }
 
-/* ## Site Header Navigation
+/* ## Menu Toggle
 --------------------------------------------- */
-
-.js nav.nav-primary,
-.js .site-header nav  {
-	display: none;
-	position: relative;
-}
 
 .menu-toggle,
 .sub-menu-toggle {
@@ -234,32 +228,43 @@
 	z-index: 100;
 }
 
-.js .nav-primary .genesis-nav-menu .menu-item,
-.js .site-header .genesis-nav-menu .menu-item {
-	display: block;
-	float: none;
-	margin: 1px 0;
-	position: relative;
-	text-align: left;
-}
+/* ## Small Sub Menu Layout
+--------------------------------------------- */
 
-.js .genesis-nav-menu .menu-item:hover {
-	position: relative;
-}
-
-.js .nav-primary .genesis-nav-menu .menu-item a,
-.js .site-header .genesis-nav-menu .menu-item a {
-	border: none;
-	padding: 12px 0;
-	width: 100%;
-}
-
-.js .genesis-nav-menu .sub-menu {
-	clear: both;
-	display: none;
-	margin: 0;
-	opacity: 1;
-	padding-left: 15px;
-	position: static;
-	width: 100%;
+@media screen and (max-width: 800px) {
+	.js nav.nav-primary,
+	.js .site-header nav  {
+		display: none;
+		position: relative;
+	}
+	
+	.js .nav-primary .genesis-nav-menu .menu-item,
+	.js .site-header .genesis-nav-menu .menu-item {
+		display: block;
+		float: none;
+		margin: 1px 0;
+		position: relative;
+		text-align: left;
+	}
+	
+	.js .genesis-nav-menu .menu-item:hover {
+		position: relative;
+	}
+	
+	.js .nav-primary .genesis-nav-menu .menu-item a,
+	.js .site-header .genesis-nav-menu .menu-item a {
+		border: none;
+		padding: 12px 0;
+		width: 100%;
+	}
+	
+	.js .genesis-nav-menu .sub-menu {
+		clear: both;
+		display: none;
+		margin: 0;
+		opacity: 1;
+		padding-left: 15px;
+		position: static;
+		width: 100%;
+	}
 }
