--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1164,17 +1164,172 @@ img.alignright,
 
 /* # Site Header
 ---------------------------------------------------------------------------------------------------- */
+/* ## Menu Toggle
+--------------------------------------------- */
+.menu-toggle,
+.sub-menu-toggle {
+  border-width: 0;
+  background-color: #FFF;
+  color: #3E3E3E;
+  display: block;
+  visibility: visible;
+  float: right;
+}
+@media (min-width: 860px) {
+  .menu-toggle,
+  .sub-menu-toggle {
+    display: none;
+    visibility: hidden;
+  }
+}
+.menu-toggle:hover, .menu-toggle:focus,
+.sub-menu-toggle:hover,
+.sub-menu-toggle:focus {
+  background-color: rgba(62, 62, 62, 0.02);
+  color: #3E3E3E;
+}
+
+.menu-toggle {
+  line-height: 20px;
+  position: relative;
+  z-index: 1000;
+  top: 15px;
+  width: auto;
+}
+
+.sub-menu-toggle {
+  float: right;
+  padding: 10px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 100;
+}
+
+/* ## Responsive Menu Structure
+--------------------------------------------- */
 .site-header {
   background-color: #FFF;
-  position: fixed;
   z-index: 999;
   width: 100%;
   top: 0;
   left: 0;
   border-bottom: 1px solid rgba(62, 62, 62, 0.08);
 }
+@media (min-width: 860px) {
+  .site-header {
+    position: fixed;
+  }
+}
 .site-header .wrap {
   padding: 10px 5%;
+}
+.site-header nav.nav-primary {
+  display: none;
+  clear: both;
+}
+@media (min-width: 860px) {
+  .site-header nav.nav-primary {
+    display: block;
+    padding: 0;
+    width: auto;
+    clear: none;
+    float: right;
+  }
+}
+.site-header nav.nav-primary a:hover,
+.site-header nav.nav-primary a:focus,
+.site-header nav.nav-primary .current-menu-item > a,
+.site-header nav.nav-primary .sub-menu .current-menu-item > a:hover,
+.site-header nav.nav-primary .sub-menu .current-menu-item > a:focus {
+  text-decoration: none;
+}
+.site-header nav.nav-primary .genesis-nav-menu {
+  font-size: 16px;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1;
+  width: 100%;
+  text-transform: uppercase;
+  margin: 12px 0;
+}
+.site-header nav.nav-primary .genesis-nav-menu li.menu-item {
+  display: block;
+  float: none;
+  padding: 12px 0;
+  position: relative;
+  text-align: left;
+}
+@media (min-width: 860px) {
+  .site-header nav.nav-primary .genesis-nav-menu li.menu-item {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+  }
+}
+.site-header nav.nav-primary .genesis-nav-menu li.menu-item:hover {
+  position: relative;
+}
+@media (min-width: 860px) {
+  .site-header nav.nav-primary .genesis-nav-menu li.menu-item:hover {
+    position: static;
+  }
+  .site-header nav.nav-primary .genesis-nav-menu li.menu-item:hover > .sub-menu {
+    left: auto;
+    opacity: 1;
+  }
+}
+.site-header nav.nav-primary .genesis-nav-menu li.menu-item a {
+  border: none;
+  color: #3E3E3E;
+  text-decoration: none;
+}
+@media (min-width: 860px) {
+  .site-header nav.nav-primary .genesis-nav-menu li.menu-item a {
+    display: block;
+    padding: 20px 20px;
+  }
+}
+.site-header nav.nav-primary .genesis-nav-menu li.menu-item .sub-menu {
+  clear: both;
+  display: none;
+  margin: 25px 0 0;
+  padding-left: 15px;
+  position: static;
+  width: auto;
+  font-size: 14px;
+  font-size: 1.4rem;
+  word-wrap: break-word;
+}
+@media (min-width: 860px) {
+  .site-header nav.nav-primary .genesis-nav-menu li.menu-item .sub-menu {
+    left: -9999px;
+    opacity: 0;
+    position: absolute;
+    transition: opacity .2s ease-in-out;
+    width: 200px;
+    z-index: 99;
+    margin: 0;
+    padding-top: 24px;
+    margin-left: -20px;
+  }
+  .site-header nav.nav-primary .genesis-nav-menu li.menu-item .sub-menu a {
+    background-color: #FFF;
+    border: 1px solid rgba(235, 235, 235, 0.38);
+    border-top: 0;
+    padding: 20px;
+    width: 200px;
+  }
+}
+@media (min-width: 860px) {
+  .site-header nav.nav-primary .genesis-nav-menu > .menu-item:last-of-type {
+    background-color: #E4003F;
+    border-radius: 5px;
+  }
+  .site-header nav.nav-primary .genesis-nav-menu > .menu-item:last-of-type > a {
+    color: #FFF;
+  }
 }
 
 /* ## Title Area
@@ -1211,200 +1366,6 @@ img.alignright,
   padding: 10px 0 0 30px;
 }
 
-/* # Site Navigation
----------------------------------------------------------------------------------------------------- */
-.nav-primary {
-  width: 100%;
-  clear: both;
-  top: 100%;
-  left: 0;
-}
-@media (min-width: 860px) {
-  .nav-primary {
-    width: auto;
-    clear: none;
-    float: right;
-    top: auto;
-    left: auto;
-    margin-left: auto;
-  }
-}
-.js .nav-primary {
-  background-color: #FFF;
-  display: none;
-  padding: 0 5%;
-  position: absolute;
-}
-@media (min-width: 860px) {
-  .js .nav-primary {
-    background-color: transparent;
-    box-shadow: none;
-    display: block;
-    position: relative;
-    padding: 0;
-  }
-}
-.nav-primary li li {
-  margin-left: 0;
-}
-.nav-primary a:hover,
-.nav-primary a:focus,
-.nav-primary .current-menu-item > a,
-.nav-primary .sub-menu .current-menu-item > a:hover,
-.nav-primary .sub-menu .current-menu-item > a:focus {
-  text-decoration: none;
-}
-
-.genesis-nav-menu {
-  clear: both;
-  font-size: 16px;
-  font-size: 1.6rem;
-  font-weight: 600;
-  line-height: 1;
-  width: 100%;
-  text-transform: uppercase;
-  margin: 12px 0;
-}
-.genesis-nav-menu .menu-item {
-  display: inline-block;
-  margin-bottom: 0;
-  padding-bottom: 0;
-  text-align: left;
-}
-.genesis-nav-menu .menu-item a {
-  color: #3E3E3E;
-  text-decoration: none;
-  display: block;
-  padding: 20px 20px;
-}
-.genesis-nav-menu .menu-item:hover {
-  position: static;
-}
-.genesis-nav-menu .menu-item:hover > .sub-menu {
-  left: auto;
-  opacity: 1;
-}
-@media (min-width: 860px) {
-  .genesis-nav-menu > .menu-item:last-of-type {
-    background-color: #E4003F;
-    border-radius: 5px;
-  }
-  .genesis-nav-menu > .menu-item:last-of-type > a {
-    color: #FFF;
-  }
-}
-.genesis-nav-menu a:hover,
-.genesis-nav-menu a:focus,
-.genesis-nav-menu .current-menu-item > a,
-.genesis-nav-menu .sub-menu .current-menu-item > a:hover,
-.genesis-nav-menu .sub-menu .current-menu-item > a:focus {
-  color: #E4003F;
-  text-decoration: none;
-}
-.genesis-nav-menu .sub-menu {
-  left: -9999px;
-  opacity: 0;
-  position: absolute;
-  transition: opacity .4s ease-in-out;
-  width: 200px;
-  z-index: 99;
-}
-.genesis-nav-menu .sub-menu a {
-  background-color: #FFF;
-  border: 1px solid rgba(235, 235, 235, 0.38);
-  border-top: 0;
-  font-size: 14px;
-  font-size: 1.4rem;
-  padding: 20px;
-  position: relative;
-  width: 200px;
-  word-wrap: break-word;
-}
-.genesis-nav-menu .sub-menu .sub-menu {
-  margin: -56px 0 0 199px;
-}
-
-/* ## Menu Toggle
---------------------------------------------- */
-.menu-toggle,
-.sub-menu-toggle {
-  border-width: 0;
-  background-color: #FFF;
-  color: #3E3E3E;
-  display: block;
-  visibility: visible;
-}
-@media (min-width: 600px) {
-  .menu-toggle,
-  .sub-menu-toggle {
-    display: none;
-    visibility: hidden;
-  }
-}
-.menu-toggle:hover, .menu-toggle:focus,
-.sub-menu-toggle:hover,
-.sub-menu-toggle:focus {
-  background-color: rgba(62, 62, 62, 0.02);
-  color: #3E3E3E;
-}
-
-.menu-toggle {
-  line-height: 20px;
-  position: relative;
-  float: right;
-  z-index: 1000;
-  top: 15px;
-  width: auto;
-}
-
-.sub-menu-toggle {
-  float: right;
-  padding: 10px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 100;
-}
-
-/* ## Small Sub Menu Layout
---------------------------------------------- */
-@media screen and (max-width: 800px) {
-  .js nav.nav-primary,
-  .js .site-header nav {
-    display: none;
-    position: relative;
-  }
-
-  .js .nav-primary .genesis-nav-menu .menu-item,
-  .js .site-header .genesis-nav-menu .menu-item {
-    display: block;
-    float: none;
-    margin: 1px 0;
-    position: relative;
-    text-align: left;
-  }
-
-  .js .genesis-nav-menu .menu-item:hover {
-    position: relative;
-  }
-
-  .js .nav-primary .genesis-nav-menu .menu-item a,
-  .js .site-header .genesis-nav-menu .menu-item a {
-    border: none;
-    padding: 12px 0;
-    width: 100%;
-  }
-
-  .js .genesis-nav-menu .sub-menu {
-    clear: both;
-    display: none;
-    margin: 0;
-    opacity: 1;
-    padding-left: 15px;
-    position: static;
-    width: 100%;
-  }
-}
 /* ## Footer Navigation
 --------------------------------------------- */
 .site-footer .genesis-nav-menu {
@@ -1528,7 +1489,12 @@ img.alignright,
 /* # Content Area
 ---------------------------------------------------------------------------------------------------- */
 .site-inner {
-  margin-top: 100px;
+  margin-top: 0;
+}
+@media (min-width: 860px) {
+  .site-inner {
+    margin-top: 100px;
+  }
 }
 .site-inner.full {
   max-width: none;
