--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -192,13 +192,13 @@
 
 	p {
 		max-width: 700px;
-		margin: 0 auto;
+		margin: 10px auto;
 		text-align: justify;
 	}
 
 	ol {
 		text-align: left;
-		padding-bottom: 20px;
+		padding: 0 0  20px 20px;
 		li {
 			list-style-type: decimal;
 		}
@@ -250,6 +250,7 @@
 	img {
 		float: left;
 		margin-right: 20px;
+		width: 140px;
 	}
 }
 
