--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -226,20 +226,25 @@
 
 		p {
 			text-align: justify;
-			margin: -9px 0 5px;
 			position: relative;
 			font-family: Georgia, serif;
 
-			&:before {
-				display: block;
-				padding-left: 10px;
-				content: "\201C";
-				font-size: 100px;
-				position: absolute;
-				left: 99px;
-				top: -49px;
-				color: $secondary-color;
+			&:first-of-type {
+				margin: -9px 0 5px;
+	
+				&:before {
+					display: block;
+					padding-left: 10px;
+					content: "\201C";
+					font-size: 100px;
+					position: absolute;
+					left: 99px;
+					top: -49px;
+					color: $secondary-color;
+				}
 			}
+
+			margin: 0 0 5px;
 		}
 
 		span {
