--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -421,8 +421,12 @@
 			}
 		
 			.item-date {
-				display: block;
-				margin-bottom: -2px;
+				display: inline-block;
+				background-color: $third-dark;
+				color: $white;
+				border-radius: 2px;
+				padding: 0 6px;
+				margin: 6px 0 0 0;
 				@include font-size($font-size-xs);
 				font-weight: $font-weight-superbold;
 			}
@@ -436,7 +440,8 @@
 			ul.tags {
 				display: none;
 
-				@include breakpoint(sm) {
+				@include breakpoint(md) {
+					display: block;
 					list-style: none;
 					margin: 0;
 					padding: 0;
