--- a/style-human.css
+++ b/style-human.css
@@ -1902,8 +1902,12 @@ img.alignright,
   border-top: 1px solid rgba(62, 62, 62, 0.08);
 }
 .timeline-item .blurb .item-content .item-date {
-  display: block;
-  margin-bottom: -2px;
+  display: inline-block;
+  background-color: rgba(62, 62, 62, 0.38);
+  color: #FFF;
+  border-radius: 2px;
+  padding: 0 6px;
+  margin: 6px 0 0 0;
   font-size: 14px;
   font-size: 1.4rem;
   font-weight: 700;
@@ -1916,8 +1920,9 @@ img.alignright,
 .timeline-item .blurb .item-content ul.tags {
   display: none;
 }
-@media (min-width: 860px) {
+@media (min-width: 1023px) {
   .timeline-item .blurb .item-content ul.tags {
+    display: block;
     list-style: none;
     margin: 0;
     padding: 0;
