--- a/sass/partials/_4_general.scss
+++ b/sass/partials/_4_general.scss
@@ -304,6 +304,12 @@ input[type="submit"],
 	text-decoration: none;
 	white-space: normal;
 	width: auto;
+
+	&.btn-alt {
+		background-color: $white;
+		color: $primary-color;
+		border: 1px solid $primary-color;
+	}
 }
 
 button:hover,
