--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -26,10 +26,6 @@
 	position: relative;
 	margin: 20px 0;
 
-	@include breakpoint(md){
-		margin: 0;
-	}
-
 	img {
 		width: 100%;
 		height: 200px;
@@ -375,6 +371,11 @@
 		.wrap {
 			max-width: 740px;
 		}
+	}
+
+	.feed-get-more {
+		text-align: center;
+		clear: both;
 	}
 }
 
