--- a/style-human.css
+++ b/style-human.css
@@ -584,6 +584,15 @@ input[type="submit"],
   white-space: normal;
   width: auto;
 }
+button.btn-alt,
+input[type="button"].btn-alt,
+input[type="reset"].btn-alt,
+input[type="submit"].btn-alt,
+.button.btn-alt {
+  background-color: #FFF;
+  color: #E4003F;
+  border: 1px solid #E4003F;
+}
 
 button:hover,
 input:hover[type="button"],
@@ -1142,7 +1151,7 @@ img.alignright,
   .two-fourths, .feed
   .two-sixths, .feed
   .two-thirds {
-    min-height: 450px;
+    min-height: 400px;
   }
 }
 
@@ -1537,11 +1546,6 @@ img.alignright,
   position: relative;
   margin: 20px 0;
 }
-@media (min-width: 1023px) {
-  .blurb {
-    margin: 0;
-  }
-}
 .blurb img {
   width: 100%;
   height: 200px;
@@ -1860,6 +1864,10 @@ img.alignright,
 }
 .feed.feed-timeline .wrap {
   max-width: 740px;
+}
+.feed .feed-get-more {
+  text-align: center;
+  clear: both;
 }
 
 @media (min-width: 1023px) {
