--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1598,7 +1598,7 @@ img.alignright,
 --------------------------------------------- */
 .hero-section {
   position: relative;
-  padding: 19% 0 7%;
+  padding: 7% 0 7%;
   background-position: center;
   background-size: cover;
   transition: all .1s ease;
@@ -1652,7 +1652,8 @@ img.alignright,
   color: white;
   text-decoration: none;
   text-transform: uppercase;
-  margin: 0 10px;
+  margin: 2px 10px;
+  display: inline-block;
 }
 .hero-section .wrap .related-actions:before {
   content: "";
@@ -1661,6 +1662,20 @@ img.alignright,
   border-top: 1px solid #FFF;
   margin: 0 auto;
   padding-top: 20px;
+}
+.hero-section .wrap .related-categories {
+  margin: 15px 0 0 0;
+}
+.hero-section .wrap .related-categories a {
+  display: inline-block;
+  color: #FFF;
+  background-color: #02ccff;
+  padding: 3px 10px;
+  border-radius: 2px;
+  margin: 2px 4px;
+  text-decoration: none;
+  font-weight: 600;
+  opacity: .86;
 }
 
 .overlay {
