--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -91,11 +91,23 @@
 --------------------------------------------- */
 .hero-section {
 	position: relative;
-	padding: 7% 0 7%;
+	padding: 11% 0 7%;
 	background-position: center;
 	background-size: cover;
 	transition: all .1s ease;
 	text-align: center;
+
+	.page-template & {
+		padding: 25% 0 3%;
+	}
+
+	@include breakpoint(sm) {
+		min-height: 400px;
+	}
+
+	@include breakpoint(md) {
+		min-height: 540px;
+	}
 
 	.wp-custom-header {
 		position: absolute;
@@ -126,6 +138,10 @@
 			color: white;
 			max-width: 700px;
 			margin: 0 auto 20px;
+			@include font-size($font-size-m);
+			@include breakpoint(sm){
+				@include font-size($font-size-l);
+			}
 			text-shadow: 1px 1px 2px $secondary-dark;
 		}
 
