added support for martin's line for h2 but deactivated it

--- a/sass/partials/_4_general.scss
+++ b/sass/partials/_4_general.scss
@@ -131,11 +131,17 @@ h2 {
 	text-transform: uppercase;
 	font-weight: $font-weight-normal;
 
+
 	&:after {
 		content: "";
 		display: block;
-		width: 100px;
+		width: 80px;
 		margin: 15px auto 15px;
+
+		// background: url('images/c1sh-line.jpg') no-repeat;
+		// background-size: 80px;
+		// height: 20px;
+
 		border-top: 1px solid $primary-color;
 	}
 }
