added ability have institution list

--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -2065,43 +2065,68 @@ p.media-caption {
   height: 100%;
 }
 
-/* ## User List
+/* ## User/Institution List
 --------------------------------------------- */
-.user-list {
+.user-list,
+.institution-list {
   padding: 0;
 }
 @media (min-width: 600px) {
-  .user-list {
+  .user-list,
+  .institution-list {
     padding: 40px 0;
   }
 }
 
-.list-single-user {
+.list-single-user,
+.list-single-institution {
   text-align: center;
   margin: 20px 0;
 }
 @media (min-width: 860px) {
-  .list-single-user {
+  .list-single-user,
+  .list-single-institution {
     margin: 10px 0;
   }
 }
-.list-single-user .single-user-avatar img {
+.list-single-user .single-user-avatar img,
+.list-single-user .single-institution-logo img,
+.list-single-institution .single-user-avatar img,
+.list-single-institution .single-institution-logo img {
   width: 130px;
   height: 130px;
   object-fit: cover;
+}
+.list-single-user .single-user-avatar img,
+.list-single-institution .single-user-avatar img {
   border-radius: 80px;
 }
-.list-single-user .single-user-meta h5, .list-single-user .single-user-meta h6, .list-single-user .single-user-meta span {
+.list-single-user .single-user-meta h5, .list-single-user .single-user-meta h6, .list-single-user .single-user-meta span,
+.list-single-user .single-institution-meta h5,
+.list-single-user .single-institution-meta h6,
+.list-single-user .single-institution-meta span,
+.list-single-institution .single-user-meta h5,
+.list-single-institution .single-user-meta h6,
+.list-single-institution .single-user-meta span,
+.list-single-institution .single-institution-meta h5,
+.list-single-institution .single-institution-meta h6,
+.list-single-institution .single-institution-meta span {
   margin: 0;
 }
-.list-single-user .single-user-meta h6 a {
+.list-single-user .single-user-meta h6 a,
+.list-single-user .single-institution-meta h6 a,
+.list-single-institution .single-user-meta h6 a,
+.list-single-institution .single-institution-meta h6 a {
   text-decoration: none;
   color: rgba(62, 62, 62, 0.87);
   text-transform: uppercase;
   font-size: 14px;
   font-size: 1.4rem;
 }
-.list-single-user .single-user-meta span {
+.list-single-user .single-user-meta span,
+.list-single-user .single-institution-meta span,
+.list-single-institution .single-user-meta span,
+.list-single-institution .single-institution-meta span {
   display: block;
   color: rgba(62, 62, 62, 0.87);
   font-size: 14px;
